<resources>
    <string name="app_name">OpenWeatherApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="info_output">Output</string>
    <string name="history">History</string>
    <string name="loading_history">Loading weather history...</string>
    <string name="history_failed">Could not load weather history.\nClick to retry.</string>

    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_close">Drawer is closed.</string>

    <string name="failed_search">Could not find any weather for this city.\nTry again.</string>
    <string name="empty_state">Choose a city from the side menu to show current weather conditions</string>
    <string name="empty_state_reload">Or click the icon above to reload your last viewed city, </string>


    <string name="cityName">City</string>
    <string name="weather">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind:</string>
    <string name="rain">Rain:</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="warmest">Warmest:</string>
    <string name="coldest">Coldest:</string>
    <string name="placeholder">N/A</string>
    <string name="degrees">°</string>
    <string name="kms">km/s</string>
    <string name="temp_placeholder">99°</string>

</resources>
